--- a/index.html
+++ b/index.html
@@ -14,89 +14,205 @@
     
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-            <div class="container">
-              <a class="navbar-brand" href="#">
-                <img src="./img/logo.png" alt="panda commerce logo">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
-                  </li>
-                </ul>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+      <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="./img/logo.png" alt="panda commerce logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shoes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Backpack</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Subscribe</a>
+              </li>
+            </ul>
+          </div>
+      </div>
+    </nav>
+
+    <section class="container">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item my-5 active">
+            <div class="row bg-danger bg-gradient d-flex align-items-center p-5">
+              <div class="col-lg-7">
+                <h1>Cool Dude Headphone</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis doloremque temporibus ab earum consectetur blanditiis nulla nostrum repellat vero.</p>
+                <h1>$420</h1>
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+              <div class="col-lg-5">
+                <img src="./img/headphone.png" class="d-block w-100" alt="headphone image">
+              </div>
+            </div>          
+          </div>
+          <div class="carousel-item my-5">
+            <div class="row bg-danger bg-gradient d-flex align-items-center p-5">
+              <div class="col-lg-7">
+                <h1>Mega LCD TV For Sports</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis doloremque temporibus ab earum consectetur blanditiis nulla nostrum repellat vero.</p>
+                <h1>$1200</h1>
+                <button class="btn btn-warning">Buy Now</button>
+              </div>
+              <div class="col-lg-5">
+                <img src="./img/tv.png" class="d-block w-100" alt="television image">
               </div>
             </div>
-        </nav>
-
-        <section class="container">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item mt-5 active">
-                        <div class="row bg-danger bg-gradient d-flex align-items-center p-5">
-                            <div class="col-lg-7">
-                                <h1>Cool Dude Headphone</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis doloremque temporibus ab earum consectetur blanditiis nulla nostrum repellat vero.</p>
-                                <h1>$420</h1>
-                                <button class="btn btn-warning">Buy Now</button>
-                            </div>
-                            <div class="col-lg-5">
-                                <img src="./img/headphone.png" class="d-block w-100" alt="headphone image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item mt-5">
-                        <div class="row bg-danger bg-gradient d-flex align-items-center p-5">
-                            <div class="col-lg-7">
-                                <h1>Mega LCD TV For Sports</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis doloremque temporibus ab earum consectetur blanditiis nulla nostrum repellat vero.</p>
-                                <h1>$1200</h1>
-                                <button class="btn btn-warning">Buy Now</button>
-                            </div>
-                            <div class="col-lg-5">
-                                <img src="./img/tv.png" class="d-block w-100" alt="television image">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item mt-5">
-                        <div class="row bg-danger bg-gradient d-flex align-items-center p-5">
-                            <div class="col-lg-7">
-                                <h1>X-Box for your living room</h1>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis doloremque temporibus ab earum consectetur blanditiis nulla nostrum repellat vero.</p>
-                                <h1>$600</h1>
-                                <button class="btn btn-warning">Buy Now</button>
-                            </div>
-                            <div class="col-lg-5">
-                                <img src="./img/xbox.png" class="d-block w-100" alt="xbox image">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+          </div>
+          <div class="carousel-item my-5">
+            <div class="row bg-danger bg-gradient d-flex align-items-center p-5">
+              <div class="col-lg-7">
+                <h1>X-Box for your living room</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis doloremque temporibus ab earum consectetur blanditiis nulla nostrum repellat vero.</p>
+                <h1>$600</h1>
+                <button class="btn btn-warning">Buy Now</button>
               </div>
-        </section>
+              <div class="col-lg-5">
+                <img src="./img/xbox.png" class="d-block w-100" alt="xbox image">
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+  </header>
 
-    </header>
+  <main>
+    <!-- catagories here -->
+    <section class="container my-5">
+      <div class="row g-5">
+        <div class="col-lg-4 col-md-6">
+          <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+            <h1 class="text-white">Watch</h1>
+            <img src="./img/watch.png" alt="image of a watch">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="p-3 border bg-light d-flex align-items-center justify-content-between rounded-3">
+            <h1 class="text-white">Bag</h1>
+            <img src="./img/bag.png" alt="image of a bag">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+            <h1 class="text-white">Shoes</h1>
+            <img src="./img/shoes.png" alt="image of a shoe">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- shoes item here  -->
+    <section class="container">
+      <h1>Shoes</h1>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card h-100  border-0 shadow-lg">
+            <img src="./img/shoe-1.png" class="card-img-top" alt="image of a shoe">
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="m-3">
+              <h5>$150</h5>
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100  border-0 shadow-lg">
+            <img src="./img/shoe-2.png" class="card-img-top" alt="image of a shoe">
+            <div class="card-body">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="m-3">
+              <h5>$320</h5>
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100  border-0 shadow-lg">
+            <img src="./img/shoe-3.png" class="card-img-top" alt="image of a shoe">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="m-3">
+              <h5>$350</h5>
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- backpack item here -->
+    <section class="container my-5">
+      <h1>Backpack</h1>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+          <div class="card h-100  border-0 shadow-lg">
+            <img src="./img/bag-1.png" class="card-img-top" alt="image of a bag">
+            <div class="card-body">
+              <h5 class="card-title">Red Laltu Bag</h5>
+              <h5>$150</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="m-3">
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100  border-0 shadow-lg">
+            <img src="./img/bag-2.png" class="card-img-top" alt="image of a shoe">
+            <div class="card-body">
+              <h5 class="card-title">Blue Niltu Bag</h5>
+              <h5>$320</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="m-3"> 
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100  border-0 shadow-lg">
+            <img src="./img/bag-3.png" class="card-img-top" alt="image of a shoe">
+            <div class="card-body">
+              <h5 class="card-title">Black Kaltu Bag</h5>
+              <h5>$169</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="m-3"> 
+              <button class="btn btn-warning">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
 
 
     <!-- fontawesome cdn -->
