--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 fixed-top">
       <div class="container">
           <a class="navbar-brand" href="#">
             <img src="./img/logo.png" alt="panda commerce logo">
@@ -29,13 +29,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Shoes</a>
+                <a class="nav-link" href="#shoes">Shoes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Backpack</a>
+                <a class="nav-link" href="#backpack">Backpack</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Subscribe</a>
+                <a class="nav-link" href="#subscribe">Subscribe</a>
               </li>
             </ul>
           </div>
@@ -122,7 +122,7 @@
       </div>
     </section>
     <!-- shoes item here  -->
-    <section class="container">
+    <section class="container" id="shoes">
       <h1>Shoes</h1>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
@@ -167,7 +167,7 @@
       </div>
     </section>
     <!-- backpack item here -->
-    <section class="container my-5">
+    <section class="container my-5" id="backpack">
       <h1>Backpack</h1>
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
@@ -211,7 +211,21 @@
         </div>
       </div>
     </section>
+    <!-- subscribe area here -->
+    <section style="height: 350px;" class="container my-5 d-flex justify-content-center align-items-center bg-primary rounded-3" id="subscribe">
+      <div>
+        <h1>LET'S STAY IN TOUCH</h1>
+        <p>Get updates on sales, specials and more</p>
+        <input type="email" placeholder="Type Your Email Here" name="" id="">
+        <br>
+        <button class="btn btn-warning">SUBMIT</button>
+      </div>
+    </section>
   </main>
+
+  <footer class="text-center">
+    <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+  </footer>
 
 
 
