--- a/index.html
+++ b/index.html
@@ -42,42 +42,42 @@
       </div>
     </nav>
 
-    <section class="container">
+    <section class="container my-5">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item my-5 active">
-            <div class="row bg-danger bg-gradient d-flex align-items-center p-5">
+          <div class="carousel-item active">
+            <div class="row panda-bg-info bg-gradient d-flex align-items-center p-5">
               <div class="col-lg-7">
                 <h1>Cool Dude Headphone</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis doloremque temporibus ab earum consectetur blanditiis nulla nostrum repellat vero.</p>
-                <h1>$420</h1>
-                <button class="btn btn-warning">Buy Now</button>
+                <h1 class="price-tag">$420</h1>
+                <button class="btn btn-bg">Buy Now</button>
               </div>
               <div class="col-lg-5">
                 <img src="./img/headphone.png" class="d-block w-100" alt="headphone image">
               </div>
             </div>          
           </div>
-          <div class="carousel-item my-5">
-            <div class="row bg-danger bg-gradient d-flex align-items-center p-5">
+          <div class="carousel-item">
+            <div class="row panda-bg-info bg-gradient d-flex align-items-center p-5">
               <div class="col-lg-7">
                 <h1>Mega LCD TV For Sports</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis doloremque temporibus ab earum consectetur blanditiis nulla nostrum repellat vero.</p>
-                <h1>$1200</h1>
-                <button class="btn btn-warning">Buy Now</button>
+                <h1 class="price-tag">$1200</h1>
+                <button class="btn btn-bg">Buy Now</button>
               </div>
               <div class="col-lg-5">
                 <img src="./img/tv.png" class="d-block w-100" alt="television image">
               </div>
             </div>
           </div>
-          <div class="carousel-item my-5">
-            <div class="row bg-danger bg-gradient d-flex align-items-center p-5">
+          <div class="carousel-item">
+            <div class="row panda-bg-info bg-gradient d-flex align-items-center p-5">
               <div class="col-lg-7">
                 <h1>X-Box for your living room</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore omnis doloremque temporibus ab earum consectetur blanditiis nulla nostrum repellat vero.</p>
-                <h1>$600</h1>
-                <button class="btn btn-warning">Buy Now</button>
+                <h1 class="price-tag">$600</h1>
+                <button class="btn btn-bg">Buy Now</button>
               </div>
               <div class="col-lg-5">
                 <img src="./img/xbox.png" class="d-block w-100" alt="xbox image">
@@ -99,22 +99,22 @@
 
   <main>
     <!-- catagories here -->
-    <section class="container my-5">
+    <section class="container  catagories my-5">
       <div class="row g-5">
         <div class="col-lg-4 col-md-6">
-          <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+          <div class="p-3 border watch-bg d-flex align-items-center justify-content-between rounded-3">
             <h1 class="text-white">Watch</h1>
             <img src="./img/watch.png" alt="image of a watch">
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
-          <div class="p-3 border bg-light d-flex align-items-center justify-content-between rounded-3">
+          <div class="p-3 border bag-bg d-flex align-items-center justify-content-between rounded-3">
             <h1 class="text-white">Bag</h1>
             <img src="./img/bag.png" alt="image of a bag">
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
-          <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+          <div class="p-3 border shoes-bg d-flex align-items-center justify-content-between rounded-3">
             <h1 class="text-white">Shoes</h1>
             <img src="./img/shoes.png" alt="image of a shoe">
           </div>
@@ -134,7 +134,7 @@
             </div>
             <div class="m-3">
               <h5>$150</h5>
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="btn btn-bg">Buy Now >></button>
             </div>
           </div>
         </div>
@@ -147,7 +147,7 @@
             </div>
             <div class="m-3">
               <h5>$320</h5>
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="btn btn-bg">Buy Now >></button>
             </div>
           </div>
         </div>
@@ -160,7 +160,7 @@
             </div>
             <div class="m-3">
               <h5>$350</h5>
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="btn btn-bg">Buy Now >></button>
             </div>
           </div>
         </div>
@@ -179,7 +179,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="m-3">
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="btn btn-bg">Buy Now >></button>
             </div>
           </div>
         </div>
@@ -192,7 +192,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="m-3"> 
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="btn btn-bg">Buy Now >></button>
             </div>
           </div>
         </div>
@@ -205,20 +205,20 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="m-3"> 
-              <button class="btn btn-warning">Buy Now</button>
+              <button class="btn btn-bg">Buy Now >></button>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- subscribe area here -->
-    <section style="height: 350px;" class="container my-5 d-flex justify-content-center align-items-center bg-primary rounded-3" id="subscribe">
+    <section style="height: 350px;" class="container my-5 d-flex justify-content-center align-items-center panda-bg-info rounded-3" id="subscribe">
       <div>
         <h1>LET'S STAY IN TOUCH</h1>
         <p>Get updates on sales, specials and more</p>
-        <input type="email" placeholder="Type Your Email Here" name="" id="">
+        <input type="email" placeholder="Type Your Email Here" name="" id="" class="form-control">
         <br>
-        <button class="btn btn-warning">SUBMIT</button>
+        <button class="btn btn-bg">SUBMIT</button>
       </div>
     </section>
   </main>
