--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   </main>
 
   <footer class="text-center">
-    <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    <p><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria. By Abdullah Al Mamun</small></p>
   </footer>
 
 
